impeliment Calendar Add & Get

--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -11,5 +11,11 @@
     "isEnabled": true,
     "connectionString": "Server=localhost;Database=CalendarCore;Integrated Security=SSPI;TrustServerCertificate=True;",
     "maxRetry": 5
+  },
+  "Swagger": {
+    "ProductName": "Calendar",
+    "ContactName": "A.Ardam",
+    "ContactEmail" :  "A.Ardam@etadbir.com"
   }
+
 }
