--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -5,6 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AppConfigurations": {
+    "ApiName": "Calendar Api",
+    "ApiVersion": "v2",
+    "CorsAllowAnyOrigin": true,
+    "CorsAllowOrigins": [],
+    "IdentityAddress": "https://si-lab-idp.etadbir.com",
+    "IdentityApiBaseUrl": "https://si-lab-idpapi.etadbir.com",
+    "IdentityAudience": "calendar.api",
+    "OidcApiName": "calendar.api",
+    "OidcSwaggerUIClientId": "calendar.api",
+    "OidcSwaggerUIClientSecret": "e5d5d5221c0c4f4eae6c77fe58ec9d99",
+    "RequireHttpsMetadata": false
+  },
   "AllowedHosts": "*",
 
   "DbOptions": {
@@ -15,7 +28,7 @@
   "Swagger": {
     "ProductName": "Calendar",
     "ContactName": "A.Ardam",
-    "ContactEmail" :  "A.Ardam@etadbir.com"
+    "ContactEmail": "A.Ardam@etadbir.com"
   }
 
 }
