edit GetHolidaysWithPeriodDate api result

--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -22,7 +22,7 @@
 
   "DbOptions": {
     "isEnabled": true,
-    "connectionString": "Server=localhost;Database=CalendarCore;Integrated Security=SSPI;TrustServerCertificate=True;",
+    "connectionString": "Server=172.16.30.144,1433;Database=CalendarCore;User Id=si-user;Password=tadbir@123;TrustServerCertificate=True",
     "maxRetry": 5
   },
   "Swagger": {
