add swagger enable config in production

--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -5,30 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  //"log": {
-  //  "isEnabled": true,
-  //  "minimumLevel": "Error",
-  //  "SplunkToken": "Splunk 7234b6n6-wtqp-9125-8rh9-sbfrq9411752",
-  //  "enableActionLifecycleLog": true,
-  //  "sinks": {
-  //    "isEnabled": true,
-  //    "console": {
-  //      "isEnabled": true,
-  //      "minimumLevel": "Information",
-  //      "useJsonFormatter": true,
-  //      "outputTemplate": null
-  //    },
-  //    "rabbitmq": {
-  //      "isEnabled": true,
-  //      "minimumLevel": "Information",
-  //      "username": "tsi-client",
-  //      "password": "pRD5V7j1X90$",
-  //      "hostname": "log.etadbir.com",
-  //      "port": 9997,
-  //      "virtualHost": "LogVirtualHost03"
-  //    }
-  //  }
-  //},
   "AppConfigurations": {
     "ApiName": "Calendar Api",
     "ApiVersion": "v2",
@@ -49,7 +25,8 @@
     "connectionString": "Server=172.16.30.144,1433;Database=CalendarCore;User Id=si-user;Password=tadbir@123;TrustServerCertificate=True",
     "maxRetry": 5
   },
-  "Swagger": {
+  "swagger": {
+    "enabled": true, 
     "ProductName": "Calendar",
     "ContactName": "A.Ardam",
     "ContactEmail": "A.Ardam@etadbir.com"
