--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -15,7 +15,7 @@
     "IdentityAudience": "calendar.api",
     "OidcApiName": "calendar.api",
     "OidcSwaggerUIClientId": "calendar.api",
-    "OidcSwaggerUIClientSecret": "e5d5d5221c0c4f4eae6c77fe58ec9d99",
+    //"OidcSwaggerUIClientSecret": "e5d5d5221c0c4f4eae6c77fe58ec9d99",
     "RequireHttpsMetadata": false
   },
   "AllowedHosts": "*",
