--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -11,7 +11,7 @@
     "CorsAllowAnyOrigin": true,
     "CorsAllowOrigins": [],
     "IdentityAddress": "https://si-lab-idp.etadbir.com",
-    "IdentityApiBaseUrl": "https://si-lab-idpapi.etadbir.com",
+    //"IdentityApiBaseUrl": "https://si-lab-idpapi.etadbir.com",
     "IdentityAudience": "calendar.api",
     "OidcApiName": "calendar.api",
     "OidcSwaggerUIClientId": "calendar.api",
