--- a/CalendarApi/appsettings.json
+++ b/CalendarApi/appsettings.json
@@ -11,11 +11,11 @@
     "CorsAllowAnyOrigin": true,
     "CorsAllowOrigins": [],
     "IdentityAddress": "https://si-lab-idp.etadbir.com",
-    //"IdentityApiBaseUrl": "https://si-lab-idpapi.etadbir.com",
-    "IdentityAudience": "calendar.api",
-    "OidcApiName": "calendar.api",
+    "IdentityApiBaseUrl": "https://si-lab-idpapi.etadbir.com",
+    "IdentityAudience": "calendar.api.scope",
+    "OidcApiName": "calendar.api.scope",
     "OidcSwaggerUIClientId": "calendar.api",
-    //"OidcSwaggerUIClientSecret": "e5d5d5221c0c4f4eae6c77fe58ec9d99",
+    "OidcSwaggerUIClientSecret": "e5d5d5221c0c4f4eae6c77fe58ec9d99",
     "RequireHttpsMetadata": false
   },
   "AllowedHosts": "*",
