--- a/CalendarApi/CalendarRestApi.csproj
+++ b/CalendarApi/CalendarRestApi.csproj
@@ -12,6 +12,8 @@
 	  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
 	  <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
 	  <PackageReference Include="IdentityModel" Version="7.0.0" />
+	  <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
+	  <PackageReference Include="IdentityModel.AspNetCore.OAuth2Introspection" Version="6.2.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
